# rov-24

./: .cspell.json  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .isort.cfg  .jscpd.json  .markdown-link-check.json  .mega-linter.yml  .mypy.ini  .pylintrc  .python-black  .trivyignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.devcontainer/linux/: devcontainer.json
.devcontainer/linux_dev_environment/: devcontainer.json
.devcontainer/linux_test_environment/: devcontainer.json
.devcontainer/macos/: devcontainer.json
.devcontainer/windows/: devcontainer.json
.devcontainer/windows_test_environment/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: arduino_lint.yml  docker.yml  industrial_ci_action.yml  lint.yml  other_lint.yml
doc/: TEMPLATE.md
docs_output/camera_streamer/: .buildinfo  camera_streamer.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_output/gui/: .buildinfo  genindex.html  gui.app.html  gui.event_nodes.client.html  gui.event_nodes.html  gui.event_nodes.publisher.html  gui.event_nodes.server.html  gui.event_nodes.subscriber.html  gui.html  gui.modules.arm.html  gui.modules.html  gui.modules.logger.html  gui.modules.seagrass.html  gui.modules.task_selector.html  gui.modules.timer.html  gui.modules.video_widget.html  gui.operator_app.html  gui.pilot_app.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_output/keyboard_driver/: .buildinfo  genindex.html  index.html  keyboard_driver.html  keyboard_driver.keyboard_driver_node.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_output/manipulators/: .buildinfo  genindex.html  index.html  manipulators.html  manipulators.manip_tester.html  manipulators.manipulators.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_output/pi_main/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  pi_main.html  pi_main.install_on_boot.html  pi_main.udev_copy.html  py-modindex.html  search.html  searchindex.js
docs_output/pixhawk_communication/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  pixhawk_communication.html  pixhawk_communication.pixhawk_communication.html  py-modindex.html  search.html  searchindex.js
docs_output/ps5_controller/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  ps5_controller.html  py-modindex.html  search.html  searchindex.js
docs_output/realsense/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  realsense.html  search.html  searchindex.js
rov-24-ws/src/surface/ros2_video_streamer/: package.xml
rov-24-ws/src/surface/ros2_video_streamer/launch/: three_camera_launch.py
src/pi/pixhawk_communication/: README.md  package.xml  setup.py
src/pi/pixhawk_communication/launch/: mavros_launch.py  pixhawk_com_launch.py
src/pi/pixhawk_communication/pixhawk_communication/: pixhawk_communication.py
src/pi/pixhawk_communication/test/: test_mypy.py
src/pi/temp_sensor/: README.md  package.xml  setup.cfg  setup.py
src/pi/temp_sensor/launch/: temp_sensor_launch.py
src/pi/temp_sensor/temp_sensor/: temp_sensor.py  temp_sensor_dry_run.py
src/rov_msgs/: CMakeLists.txt  README.md  package.xml
src/rov_msgs/msg/: FloatCommand.msg  FloatData.msg  FloatDepthData.msg  FloatSerial.msg  FloatSingle.msg  IPAddress.msg  MissionTimer.msg  MissionTimerTick.msg  PixhawkInstruction.msg  Temperature.msg  ValveManip.msg  VehicleState.msg
src/rov_msgs/rov_msgs/: CMakeLists.txt  package.xml
src/rov_msgs/rov_msgs/msg/: Flooding.msg  IPAddress.msg  VehicleState.msg
src/rov_msgs/srv/: AutonomousFlight.srv  MissionTimerSet.srv  MissionTimerSetRunnning.srv  MissionTimerSetTime.srv
src/surface/flight_control/: README.md  package.xml  setup.cfg  setup.py
src/surface/flight_control/flight_control/: auto_docking_node.py  auto_transplant_node.py  control_inverter_node.py  keyboard_control_node.py  manual_control_node.py  multiplexer.py  pixhawk_instruction.py
src/surface/flight_control/flight_control/image_processing/: image_pipeline.py  requirements.txt  square_detector.py
src/surface/flight_control/launch/: flight_control_launch.py  keyboard_control_launch.py  simulation_transplant_launch.py
src/surface/flight_control/test/: test_keyboard_control.py  test_manual_control.py  test_pep257.py  test_task_selector.py
src/surface/gui/: README.md  package.xml  setup.py
src/surface/gui/gui/: app.py  debug_app.py  event_nodes  livestream_app.py  operator_app.py  pilot_app.py  theme.py
src/surface/gui/gui/auxiliary_nodes/: timer.py
src/surface/gui/gui/event_nodes/: client.py  publisher.py  server.py  service.py  subscriber.py
src/surface/gui/gui/gui_nodes/auxiliary_nodes/: timer.py
src/surface/gui/gui/gui_nodes/event_nodes/: client.py  publisher.py  subscriber.py
src/surface/gui/gui/modules/: arm.py  logger.py  seagrass.py  task_selector.py  timer.py  video_widget.py
src/surface/gui/gui/styles/: customStyles.py  custom_styles.py  dark.qss  light.qss  watermelon.qss
src/surface/gui/gui/widgets/: arm.py  circle.py  debug_tab.py  depth_hold.py  float_comm.py  flood_visual.py  flood_warning.py  heartbeat.py  ip_widget.py  livestream_header.py  logger.py  seagrass.py  task_selector.py  temperature.py  thruster_tester.py  timer.py  video_widget.py
src/surface/gui/gui/widgets/tabs/: auto_transplant_debug.py  general_debug_tab.py
src/surface/gui/launch/: operator_launch.py  pilot_launch.py
src/surface/gui/test/: test_app.py  test_hi.py  test_operator_app.py  test_pep257.py  test_pilot_app.py
src/surface/gui/themes/: dark.qss  light.qss  watermelon.qss
src/surface/slam/slam_main/: package.xml  setup.cfg  setup.py
src/surface/slam/slam_main/launch/: rtabmap_launch.py  slam_and_realsense_launch.py
(+424 files in other folders)
