[project]
name = "rov-24"
# I know Ben hates this but this required lol
version = "1.1.0"

dependencies = [
    'setuptools',
    'types-setuptools',
    'flake8==7.0.0',
    'mypy >= 1.7',
    'pynput',
    'types-pynput',
    'pyqt6',
    'pyqtdarktheme',
    'opencv-python>=4.8.1',
    'numpy>=1.26',
    'pytest-qt',
    'pytest-xvfb',
    'Pyside2'  # can be removed when ament_pep257 is gone
]

[tool.pydocstyle]
convention = "numpy"
add-ignore=[
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107"
]

[tool.mypy]
strict = true
warn_unused_configs = true
allow_untyped_calls = true
[[tool.mypy.overrides]]
# Done becuase tons of python packages are missing stubs or py.typed markers
module = ["ament_mypy.*",
          "ament_pep257.*",
          "ament_flake8.*",
          "ament_index_python.*",
          "sensor_msgs.*",
          "mavros_msgs.*",
          "launch_ros.*",
          "launch.*",
          "robot_upstart.*",
          "builtin_interfaces.*",
          "rcl_interfaces.*",
          "qdarktheme.*",
          "cv_bridge.*",
          "pytestqt.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]   
qt_api = "pyqt6"

[tool.pylintrc]
disable = ["duplicate-code", "fixme"]
extension-pkg-whitelist = ["PyQt6", "cv2"]
