cmake_minimum_required(VERSION 3.8)
project(rov_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

include(FetchContent) # once in the project to include the module

FetchContent_Declare(rosidl_generator_mypy
                     GIT_REPOSITORY https://github.com/rospypi/rosidl_generator_mypy.git)
FetchContent_MakeAvailable(rosidl_generator_mypy)


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "srv/AutonomousFlight.srv"
  "msg/Manip.msg"
  "msg/CameraControllerSwitch.msg"
  "msg/Flooding.msg"
  "msg/IPAddress.msg"
  "msg/VehicleState.msg"
  "msg/Heartbeat.msg"
  DEPENDENCIES std_msgs
)

ament_package()
