<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>temp_sensor</name>
  <version>0.0.3</version>
  <description>Measures temperature</description>
  <maintainer email="bwp18@case.edu">Benjamin Poulin</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-smbus</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
