<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_msgs</name>
  <version>1.1.0</version>
  <description>MATE ROV Custom ROS messages</description>
  <maintainer email="bwp18@case.edu">Benjamin Poulin</maintainer>
  <maintainer email="ery12@case.edu">Eric Yarnot</maintainer>
  <maintainer email="rmc170@case.edu">Michael Carlstrom</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>action_msgs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>rosidl_generator_py</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
