<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_main</name>
  <version>1.0.0</version>
  <description>Localization and mapping with a realsense depth camera</description>
  <maintainer email="nrm98@case.edu">rov</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rtabmap_ros</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
